--- a/app.scss
+++ b/app.scss
@@ -42,6 +42,43 @@ p a {
     color: var(--pink);
   }
 }
+
+.bg-pink {
+  background-color: rgb(255, 105, 180);
+}
+.bg-yellow {
+  background-color: rgb(197, 170, 47);
+}
+.bg-blue {
+  background-color: rgb(7, 133, 155);
+}
+.bg-purple {
+  background-color: rgb(128, 0, 128);
+}
+
+.takeaway-img {
+  width: 100%;
+  max-width: 450px;
+}
+
+.slider-overlay {
+  position: absolute;
+  color: white;
+  top: 20%;
+  left: 45%;
+  z-index: 25;
+  padding-right: 1rem;
+
+  @media (max-width: 992px) {
+    position: unset;
+    color: #212529;
+
+    .btn-outline-light {
+      color: #212529;
+      border-color: #212529;
+    }
+  }
+}
 //Small screens and down
 @media (max-width: 992px) {
   nav {
@@ -171,10 +208,23 @@ p a {
 }
 
 .section-header {
-  background-image: var(--gradient);
+  background-image: url(/img/bg-header.webp);
+  background-repeat: none;
+  background-size: cover;
   height: 100vh;
   min-height: 800px;
-  clip-path: polygon(0 0, 100% 0, 100% 24%, 83% 80%, 0 100%, 0% 50%);
+  clip-path: polygon(
+    100% 0,
+    100% 100%,
+    90% 80%,
+    81% 96%,
+    67% 84%,
+    61% 96%,
+    38% 87%,
+    17% 98%,
+    0 100%,
+    0 0
+  );
   transition: all ease-in-out 0.7s;
 
   p {
@@ -184,7 +234,18 @@ p a {
 }
 
 .straight-clip {
-  clip-path: polygon(0 0, 100% 0, 100% 0%, 100% 100%, 0 100%, 0% 50%);
+  clip-path: polygon(
+    100% 0,
+    100% 100%,
+    91% 100%,
+    78% 100%,
+    67% 100%,
+    54% 100%,
+    29% 100%,
+    11% 100%,
+    0 100%,
+    0 0
+  );
 }
 
 .section-services {
