--- a/app.css
+++ b/app.css
@@ -12,7 +12,8 @@
   margin: 0;
   padding: 0;
   font-family: var(--fontbody);
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -43,7 +44,7 @@ p a:hover {
 }
 
 .bg-pink {
-  background-color: hotpink;
+  background-color: var(--pink);
 }
 
 .bg-yellow {
@@ -55,7 +56,7 @@ p a:hover {
 }
 
 .bg-purple {
-  background-color: purple;
+  background-color: var(--purple);
 }
 
 .takeaway-img {
@@ -86,12 +87,17 @@ p a:hover {
 @media (max-width: 992px) {
   nav {
     background-color: rgba(0, 0, 0, 0.755);
+    -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
   }
   nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-left: auto;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   nav ul li {
     list-style-type: none;
@@ -107,17 +113,20 @@ p a:hover {
     color: white;
   }
   .section-header {
-    clip-path: none !important;
+    -webkit-clip-path: none !important;
+            clip-path: none !important;
   }
   .section-services {
-    clip-path: none !important;
+    -webkit-clip-path: none !important;
+            clip-path: none !important;
     background-image: none !important;
   }
   .box {
     border-left: 2px solid var(--pink);
     min-height: unset !important;
     margin-bottom: 20px;
-    box-shadow: -1px -1px 11px 3px #d0d0d0;
+    -webkit-box-shadow: -1px -1px 11px 3px #d0d0d0;
+            box-shadow: -1px -1px 11px 3px #d0d0d0;
   }
 }
 
@@ -128,13 +137,20 @@ p a:hover {
     height: 80px;
     top: 0px;
     left: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 20px;
     background-color: transparent;
+    -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
   }
   nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-left: auto;
   }
@@ -166,12 +182,17 @@ p a:hover {
   width: 100%;
   height: 1px;
   background-color: white;
-  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
 }
 
 .nav-item:hover::after {
-  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
 }
 
 .nav__button {
@@ -187,6 +208,7 @@ p a:hover {
   pointer-events: none;
   position: relative;
   left: 0px;
+  -webkit-transition: all ease-in-out 250ms;
   transition: all ease-in-out 250ms;
   width: 400px;
   font-size: 1.2em;
@@ -205,7 +227,9 @@ p a:hover {
   background-size: cover;
   height: 100vh;
   min-height: 800px;
-  clip-path: polygon(100% 0, 100% 85%, 90% 80%, 81% 96%, 67% 84%, 61% 96%, 38% 87%, 17% 98%, 0 100%, 0 0);
+  -webkit-clip-path: polygon(100% 0, 100% 85%, 90% 80%, 81% 96%, 67% 84%, 61% 96%, 38% 87%, 17% 98%, 0 100%, 0 0);
+          clip-path: polygon(100% 0, 100% 85%, 90% 80%, 81% 96%, 67% 84%, 61% 96%, 38% 87%, 17% 98%, 0 100%, 0 0);
+  -webkit-transition: all ease-in-out 0.7s;
   transition: all ease-in-out 0.7s;
 }
 
@@ -215,7 +239,8 @@ p a:hover {
 }
 
 .straight-clip {
-  clip-path: polygon(100% 0, 100% 100%, 91% 100%, 78% 100%, 67% 100%, 54% 100%, 29% 100%, 11% 100%, 0 100%, 0 0);
+  -webkit-clip-path: polygon(100% 0, 100% 100%, 91% 100%, 78% 100%, 67% 100%, 54% 100%, 29% 100%, 11% 100%, 0 100%, 0 0);
+          clip-path: polygon(100% 0, 100% 100%, 91% 100%, 78% 100%, 67% 100%, 54% 100%, 29% 100%, 11% 100%, 0 100%, 0 0);
 }
 
 .section-services {
@@ -224,7 +249,8 @@ p a:hover {
   background-repeat: no-repeat;
   background-size: 600px;
   background-position-x: 10%;
-  clip-path: polygon(0 28%, 100% 0, 100% 76%, 0% 100%);
+  -webkit-clip-path: polygon(0 28%, 100% 0, 100% 76%, 0% 100%);
+          clip-path: polygon(0 28%, 100% 0, 100% 76%, 0% 100%);
   height: 100%;
   width: 100%;
   overflow: visible;
@@ -273,32 +299,49 @@ footer a {
 }
 
 .scale {
+  -webkit-transition: all ease-in-out 0.5s;
   transition: all ease-in-out 0.5s;
-  transform: scale(0.8);
-  filter: grayscale(1);
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
 }
 
 .scale:hover {
-  transform: scale(1);
-  filter: grayscale(0);
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0);
 }
 
 .flexpower {
   position: relative;
   overflow: hidden;
   min-height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .flexpower img {
+  -webkit-transition: -webkit-transform ease 0.5s;
+  transition: -webkit-transform ease 0.5s;
   transition: transform ease 0.5s;
-  transform: scale(1);
+  transition: transform ease 0.5s, -webkit-transform ease 0.5s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .flexpower img:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .flexpower .bg-object {
@@ -306,11 +349,80 @@ footer a {
   height: 90%;
   width: 90%;
   background-image: url("/img/sky.jpg");
-  clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+  -webkit-clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+          clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: -1;
+  background-size: cover;
+  background-position: left;
+  animation: skyfall infinite alternate-reverse 25s;
+  opacity: 0.7;
+}
+
+@-webkit-keyframes skyfall {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
+}
+
+@keyframes skyfall {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
+}
+
+.machsafe {
+  position: relative;
+  overflow: hidden;
+  min-height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.machsafe img {
+  -webkit-transition: -webkit-transform ease 0.5s;
+  transition: -webkit-transform ease 0.5s;
+  transition: transform ease 0.5s;
+  transition: transform ease 0.5s, -webkit-transform ease 0.5s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.machsafe img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.machsafe .bg-object {
+  display: block;
+  height: 90%;
+  width: 90%;
+  background-image: url("/img/mach-safe-bg.jpg");
+  -webkit-clip-path: polygon(30% 0, 100% 1%, 73% 100%, 0 100%);
+          clip-path: polygon(30% 0, 100% 1%, 73% 100%, 0 100%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   z-index: -1;
   background-size: cover;
   background-position: left;
@@ -343,12 +455,23 @@ footer a {
   bottom: 0;
   height: 95%;
   width: 95%;
+  background-image: -webkit-gradient(linear, left top, right top, from(#81018d), to(#023679));
   background-image: linear-gradient(90deg, #81018d, #023679);
   background-size: 500%;
   z-index: -1;
-  clip-path: polygon(75% 0, 0% 66%, 97% 93%);
+  -webkit-clip-path: polygon(75% 0, 0% 66%, 97% 93%);
+          clip-path: polygon(75% 0, 0% 66%, 97% 93%);
   animation: movegradient infinite alternate-reverse 8s;
   opacity: 0.7;
+}
+
+@-webkit-keyframes movegradient {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
 }
 
 @keyframes movegradient {
@@ -374,9 +497,15 @@ footer a {
 }
 
 .portfolio-item .tech ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
   padding-left: 0px;
   margin-bottom: 15px;
@@ -395,6 +524,7 @@ footer a {
   stroke-width: 1px;
   stroke-dasharray: 2040px;
   stroke-dashoffset: -2040px;
+  -webkit-transition: stroke-dashoffset 2s linear 0.8s, fill 0.8s ease;
   transition: stroke-dashoffset 2s linear 0.8s, fill 0.8s ease;
 }
 
@@ -402,6 +532,7 @@ footer a {
   fill: #4e4e4e;
   stroke: #4e4e4e;
   stroke-dashoffset: 0px;
+  -webkit-transition: stroke-dashoffset 2.5s linear, fill 0.8s ease 2s;
   transition: stroke-dashoffset 2.5s linear, fill 0.8s ease 2s;
 }
 
@@ -421,13 +552,16 @@ footer a {
 
 .box {
   min-height: 350px;
+  -webkit-transition: all ease-in-out 0.5s;
   transition: all ease-in-out 0.5s;
   padding: 30px;
 }
 
 .box:hover {
-  box-shadow: -1px -1px 11px 3px #d0d0d0;
-  transform: translate(0px, -20px);
+  -webkit-box-shadow: -1px -1px 11px 3px #d0d0d0;
+          box-shadow: -1px -1px 11px 3px #d0d0d0;
+  -webkit-transform: translate(0px, -20px);
+          transform: translate(0px, -20px);
 }
 
 .social {
@@ -444,11 +578,13 @@ footer a {
   min-height: 400px;
   position: relative;
   overflow: hidden;
+  -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
 }
 
 .hoverbox:hover #hoverboxcontent {
-  transform: translateY(0px);
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
   opacity: 1;
 }
 
@@ -460,17 +596,28 @@ footer a {
   display: block;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   opacity: 0.8;
   background-color: rgba(168, 38, 180, 0.9);
   position: absolute;
-  transform: translateY(-400px);
+  -webkit-transform: translateY(-400px);
+          transform: translateY(-400px);
   opacity: 0;
   color: white;
   z-index: 5;
+  -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
   text-align: center;
   padding: 10px;
@@ -483,10 +630,12 @@ footer a {
   font-size: 2.3rem;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 100%;
   height: auto;
   text-align: center;
+  -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
   text-shadow: 5px 5px 10px black;
 }
@@ -499,14 +648,29 @@ footer a {
   width: 30px;
   height: 30px;
   border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .owl-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 10px;
   width: 100%;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
+#footer > .thankyou-footer-wrapper {
+  display: none;
+}
+/*# sourceMappingURL=app.css.map */
