--- a/app.scss
+++ b/app.scss
@@ -44,16 +44,19 @@ p a {
 }
 
 .bg-pink {
-  background-color: rgb(255, 105, 180);
+  background-color: var(--pink);
 }
+
 .bg-yellow {
   background-color: rgb(197, 170, 47);
 }
+
 .bg-blue {
   background-color: rgb(7, 133, 155);
 }
+
 .bg-purple {
-  background-color: rgb(128, 0, 128);
+  background-color: var(--purple);
 }
 
 .takeaway-img {
@@ -79,6 +82,7 @@ p a {
     }
   }
 }
+
 //Small screens and down
 @media (max-width: 992px) {
   nav {
@@ -213,18 +217,16 @@ p a {
   background-size: cover;
   height: 100vh;
   min-height: 800px;
-  clip-path: polygon(
-    100% 0,
-    100% 85%,
-    90% 80%,
-    81% 96%,
-    67% 84%,
-    61% 96%,
-    38% 87%,
-    17% 98%,
-    0 100%,
-    0 0
-  );
+  clip-path: polygon(100% 0,
+      100% 85%,
+      90% 80%,
+      81% 96%,
+      67% 84%,
+      61% 96%,
+      38% 87%,
+      17% 98%,
+      0 100%,
+      0 0);
   transition: all ease-in-out 0.7s;
 
   p {
@@ -234,18 +236,16 @@ p a {
 }
 
 .straight-clip {
-  clip-path: polygon(
-    100% 0,
-    100% 100%,
-    91% 100%,
-    78% 100%,
-    67% 100%,
-    54% 100%,
-    29% 100%,
-    11% 100%,
-    0 100%,
-    0 0
-  );
+  clip-path: polygon(100% 0,
+      100% 100%,
+      91% 100%,
+      78% 100%,
+      67% 100%,
+      54% 100%,
+      29% 100%,
+      11% 100%,
+      0 100%,
+      0 0);
 }
 
 .section-services {
@@ -350,6 +350,52 @@ footer {
       0% {
         background-position: left;
       }
+
+      100% {
+        background-position: right;
+      }
+    }
+  }
+}
+
+.machsafe {
+  position: relative;
+  overflow: hidden;
+  min-height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  img {
+    transition: transform ease 0.5s;
+    transform: scale(1);
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  .bg-object {
+    display: block;
+    height: 90%;
+    width: 90%;
+    background-image: url("/img/mach-safe-bg.jpg");
+    clip-path: polygon(30% 0, 100% 1%, 73% 100%, 0 100%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    background-size: cover;
+    background-position: left;
+    animation: skyfall infinite alternate-reverse 25s;
+    opacity: 0.7;
+
+    @keyframes skyfall {
+      0% {
+        background-position: left;
+      }
+
       100% {
         background-position: right;
       }
@@ -378,10 +424,12 @@ footer {
     clip-path: polygon(75% 0, 0% 66%, 97% 93%);
     animation: movegradient infinite alternate-reverse 8s;
     opacity: 0.7;
+
     @keyframes movegradient {
       0% {
         background-position: left;
       }
+
       100% {
         background-position: right;
       }
@@ -507,6 +555,7 @@ footer {
     text-align: center;
     padding: 10px;
   }
+
   .hoverbox-title {
     color: white;
     position: absolute;
@@ -542,3 +591,10 @@ footer {
   width: 100%;
   justify-content: space-between;
 }
+
+// START -- JOT FORM
+#footer>.thankyou-footer-wrapper {
+  display: none;
+}
+
+// END -- JOT FORM
