--- a/src/html/partials/nav.html
+++ b/src/html/partials/nav.html
@@ -18,7 +18,7 @@
                     <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#services" tabindex="-1" aria-disabled="true">Services</a>
