--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -577,13 +577,44 @@ footer {
   position: relative;
   overflow: hidden;
 
-  img {
+  .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 37, 40, .40);
     position: absolute;
-    z-index: -1;
     top: 0;
     left: 0;
-    object-fit: cover;
+    z-index: -1;
+  }
+
+  img {
+    position: absolute;
+    z-index: -2;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .page-header-desktop {
+    display: none;
+
+    @media screen and (min-width:768px) {
+      display: block;
+    }
+  }
+
+  .page-header-mobile {
+    display: block;
+
+    @media screen and (min-width:768px) {
+      display: none;
+    }
+  }
+
+  .subhead {
+    text-shadow: 0px 0px 4px #000000a3;
   }
 }
 
