Layout and design updates

--- a/src/html/partials/nav.html
+++ b/src/html/partials/nav.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="#services" tabindex="-1" aria-disabled="true">Services</a>
                 </li>
                 <li>
-                    <a id="start-button" class="nav-link btn btn-dark px-3 mx-3 text-uppercase rounded-0 bg-pink" href="./web-design-quote-ireland.html" tabindex="-1" aria-disabled="true">Get a Quote</a>
+                    <a id="start-button" class="nav-link btn btn-dark px-3 mx-3 text-uppercase rounded-0 bg-green-500" href="./web-design-quote-ireland.html" tabindex="-1" aria-disabled="true">Get a Quote</a>
                 </li>
             </ul>
         </div>
