--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,10 +1,14 @@
 // @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap");
 // @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap");
+@import url("../../node_modules/bootstrap/dist/css/bootstrap.min.css");
 
 :root {
   --purple: #463593;
   --pink: #db00b3;
-  --gradient: linear-gradient(100deg, var(--purple), var(--pink));
+  --green-300: #4d7d43;
+  --green-500: #24501b;
+  // --gradient: linear-gradient(100deg, var(--purple), var(--pink));
+  --gradient: linear-gradient(100deg, var(--green-300), var(--green-500));
   --fontbody: "Source Sans Pro", sans-serif;
   --fontheading: "Roboto Slab", serif;
 }
@@ -39,8 +43,19 @@ p a {
   border-bottom: 1px dotted #dddddd;
 
   &:hover {
-    color: var(--pink);
+    // color: var(--pink);
+    color: var(--green-500);
   }
+}
+
+
+
+.bg-green-300 {
+  background-color: var(--green-300);
+}
+
+.bg-green-500 {
+  background-color: var(--green-500);
 }
 
 .bg-pink {
@@ -99,7 +114,7 @@ p a {
         margin: 10px 0px !important;
 
         a {
-          color: white;
+          color: white !important;
           text-decoration: none;
           padding: 10px 20px !important;
           font-size: 1.3rem;
@@ -217,16 +232,18 @@ p a {
   background-size: cover;
   height: 100vh;
   min-height: 800px;
-  clip-path: polygon(100% 0,
-      100% 85%,
-      90% 80%,
-      81% 96%,
-      67% 84%,
-      61% 96%,
-      38% 87%,
-      17% 98%,
-      0 100%,
-      0 0);
+  // clip-path: polygon(100% 0,
+  //     100% 85%,
+  //     90% 80%,
+  //     81% 96%,
+  //     67% 84%,
+  //     61% 96%,
+  //     38% 87%,
+  //     17% 98%,
+  //     0 100%,
+  //     0 0);
+  clip-path: polygon(100% 0, 100% 60%, 82% 86%, 0 100%, 0 0);
+
   transition: all ease-in-out 0.7s;
 
   p {
@@ -236,16 +253,18 @@ p a {
 }
 
 .straight-clip {
-  clip-path: polygon(100% 0,
-      100% 100%,
-      91% 100%,
-      78% 100%,
-      67% 100%,
-      54% 100%,
-      29% 100%,
-      11% 100%,
-      0 100%,
-      0 0);
+  // clip-path: polygon(100% 0,
+  //     100% 100%,
+  //     91% 100%,
+  //     78% 100%,
+  //     67% 100%,
+  //     54% 100%,
+  //     29% 100%,
+  //     11% 100%,
+  //     0 100%,
+  //     0 0);
+  clip-path: polygon(100% 0, 100% 60%, 100% 100%, 0 100%, 0 0);
+
 }
 
 .section-services {
@@ -266,11 +285,20 @@ p {
 }
 
 .subhead {
-  color: var(--pink);
+  // color: var(--pink);
+  color: var(--green-500);
   font: var(--fontbody);
   text-transform: uppercase;
   font-size: 1.2rem;
   letter-spacing: 0.2rem;
+}
+
+.text-highlight-green {
+  background-color: #103409d4;
+  color: #FFFFFF !important;
+  width: fit-content;
+  height: fit-content;
+  padding: 5px 10px 5px 10px;
 }
 
 .dark {
@@ -403,6 +431,51 @@ footer {
   }
 }
 
+.thetuitioncentre {
+  position: relative;
+  overflow: hidden;
+  min-height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  img {
+    transition: transform ease 0.5s;
+    transform: scale(1);
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  .bg-object {
+    display: block;
+    height: 90%;
+    width: 90%;
+    background-image: url("../media/tuition-centre-bg.jpg");
+    clip-path: polygon(0% 0, 100% 1%, 72% 75%, 0 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    // transform: translate(-50%, -50%);
+    z-index: -1;
+    background-size: cover;
+    background-position: left;
+    animation: skyfall infinite alternate-reverse 25s;
+    opacity: 0.7;
+
+    @keyframes skyfall {
+      0% {
+        background-position: left;
+      }
+
+      100% {
+        background-position: right;
+      }
+    }
+  }
+}
+
 .gradient {
   overflow: hidden;
   position: relative;
@@ -497,7 +570,8 @@ footer {
   width: 100%;
   max-width: 80px;
   padding-bottom: 20px;
-  fill: var(--pink);
+  // fill: var(--pink);
+  fill: var(--green-300);
 }
 
 .box {
@@ -508,6 +582,10 @@ footer {
   &:hover {
     box-shadow: -1px -1px 11px 3px #d0d0d0;
     transform: translate(0px, -20px);
+
+    .icon {
+      fill: var(--green-500);
+    }
   }
 }
 
@@ -648,3 +726,21 @@ footer {
 }
 
 // END -- JOT FORM
+
+.an-dulra {
+  .page-header-bg-image {
+    clip-path: polygon(0 0, 100% 0, 100% 76%, 0% 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    @media screen and (min-width:768px) {
+      min-height: 800px;
+    }
+  }
+}
+
+.nav-link {
+  color: white !important;
+}
